--- a/apple.json
+++ b/apple.json
@@ -1,6 +1,6 @@
 {
   "domainUrl":"",
-  "updateUrl":"http://appdown.hezubar/hongchen_download/",
+  "updateUrl":"http://appdown.hezubar.com/hongchen_download/",
   "branches":[
     {
       "code":"1000",
